Update after gnulib changed.
* configure.ac (AC_PREREQ): Bump minimum Autoconf version to 2.64.
* gettext-runtime/configure.ac (AC_PREREQ): Likewise.
* gettext-runtime/libasprintf/configure.ac (AC_PREREQ): Likewise.
* libtextstyle/configure.ac (AC_PREREQ): Likewise.
* gettext-tools/configure.ac (AC_PREREQ): Likewise.
* gettext-tools/examples/configure.ac (AC_PREREQ): Likewise.

--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -197,6 +197,7 @@
 /lib/term-styled-ostream.oo.c
 /lib/term-styled-ostream.oo.h
 /lib/terminfo.h
+/lib/thread-optim.h
 /lib/time.in.h
 /lib/tparm.c
 /lib/tputs.c
