libtextstyle: Add is_instance_of_* predicates.
* libtextstyle/gnulib-local/lib/fd-ostream.oo.h (is_instance_of_fd_ostream): New
declaration.
* libtextstyle/gnulib-local/lib/fd-ostream.oo.c (is_instance_of_fd_ostream): New
function.
* libtextstyle/gnulib-local/lib/file-ostream.oo.h (is_instance_of_file_ostream):
New declaration.
* libtextstyle/gnulib-local/lib/file-ostream.oo.c (is_instance_of_file_ostream):
New function.
* libtextstyle/gnulib-local/lib/html-ostream.oo.h (is_instance_of_html_ostream):
New declaration.
* libtextstyle/gnulib-local/lib/html-ostream.oo.c (is_instance_of_html_ostream):
New function.
* libtextstyle/gnulib-local/lib/html-styled-ostream.oo.h
(is_instance_of_html_styled_ostream): New declaration.
* libtextstyle/gnulib-local/lib/html-styled-ostream.oo.c
(is_instance_of_html_styled_ostream): New function.
* libtextstyle/gnulib-local/lib/iconv-ostream.oo.h
(is_instance_of_iconv_ostream): New declaration.
* libtextstyle/gnulib-local/lib/iconv-ostream.oo.c
(is_instance_of_iconv_ostream): New function.
* libtextstyle/gnulib-local/lib/memory-ostream.oo.h
(is_instance_of_memory_ostream): New declaration.
* libtextstyle/gnulib-local/lib/memory-ostream.oo.c
(is_instance_of_memory_ostream): New function.
* libtextstyle/gnulib-local/lib/noop-styled-ostream.oo.h
(is_instance_of_noop_styled_ostream): New declaration.
* libtextstyle/gnulib-local/lib/noop-styled-ostream.oo.c
(is_instance_of_noop_styled_ostream): New function.
* libtextstyle/gnulib-local/lib/styled-ostream.oo.h
(is_instance_of_styled_ostream): New declaration.
* libtextstyle/gnulib-local/lib/styled-ostream.oo.c
(is_instance_of_styled_ostream): New function.
* libtextstyle/gnulib-local/lib/term-ostream.oo.h (is_instance_of_term_ostream):
New declaration.
* libtextstyle/gnulib-local/lib/term-ostream.oo.c (is_instance_of_term_ostream):
New function.
* libtextstyle/gnulib-local/lib/term-styled-ostream.oo.h
(is_instance_of_term_styled_ostream): New declaration.
* libtextstyle/gnulib-local/lib/term

--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -239,6 +239,7 @@
 /lib/xvasprintf.h
 /tests/
 !/tests/Makefile.am
+!/tests/test-instanceof.c
 
 # Files brought in by "automake --add-missing --copy":
 /build-aux/compile
