libtextstyle: Add accessor functions.
* libtextstyle/gnulib-local/lib/fd-ostream.oo.h (fd_ostream): New methods
get_descriptor, get_filename, is_buffered.
* libtextstyle/gnulib-local/lib/fd-ostream.oo.c (fd_ostream::get_descriptor,
fd_ostream::get_filename, fd_ostream::is_buffered): New functions.
* libtextstyle/gnulib-local/lib/file-ostream.oo.h (file_ostream): New method
get_stdio_stream.
* libtextstyle/gnulib-local/lib/file-ostream.oo.c
(file_ostream::get_stdio_stream): New function.
* libtextstyle/gnulib-local/lib/html-ostream.oo.h (html_ostream): New method
get_destination.
* libtextstyle/gnulib-local/lib/html-ostream.oo.c
(html_ostream::get_destination): New function.
* libtextstyle/gnulib-local/lib/html-styled-ostream.oo.h: Include
html-ostream.h.
(html_styled_ostream): New methods get_destination, get_html_destination,
get_css_filename.
* libtextstyle/gnulib-local/lib/html-styled-ostream.oo.c (html_styled_ostream):
Add field 'css_filename'.
(html_styled_ostream::free): Free it.
(html_styled_ostream_create): Initialize it.
(html_styled_ostream::get_destination,
html_styled_ostream::get_html_destination,
html_styled_ostream::get_css_filename): New functions.
* libtextstyle/gnulib-local/lib/iconv-ostream.oo.h (iconv_ostream): New methods
get_from_encoding, get_to_encoding, get_destination.
* libtextstyle/gnulib-local/lib/iconv-ostream.oo.c
(iconv_ostream::get_from_encoding, iconv_ostream::get_to_encoding,
iconv_ostream::get_destination): New functions.
* libtextstyle/gnulib-local/lib/noop-styled-ostream.oo.h (noop_styled_ostream):
New methods get_destination, is_owning_destination.
* libtextstyle/gnulib-local/lib/noop-styled-ostream.oo.c
(noop_styled_ostream::get_destination,
noop_styled_ostream::is_owning_destination): New functions.
* libtextstyle/gnulib-local/lib/term-ostream.oo.h (term_ostream): New methods
get_descriptor, get_filename, get_tty_control, get_effective_tty_control.
* libtextstyle/gnulib-local/lib/term-ostream.oo.c (term_ostream): Add field
't

--- a/libtextstyle/tests/Makefile.am
+++ b/libtextstyle/tests/Makefile.am
@@ -24,9 +24,15 @@ AUTOMAKE_OPTIONS += 1.13 subdir-objects color-tests
 # Ensure that ../lib/config.h is seen before ../config.h.
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)/lib -I$(top_builddir)
 
-TESTS += test-instanceof
-check_PROGRAMS += test-instanceof
-EXTRA_DIST += test-instanceof.c
+TESTS += \
+  test-instanceof \
+  test-accessors
+check_PROGRAMS += \
+  test-instanceof \
+  test-accessors
+EXTRA_DIST += \
+  test-instanceof.c \
+  test-accessors.c
 AM_CPPFLAGS += -DSRCDIR=\"$(srcdir)/\"
 
 
