Update after gnulib changed.
* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC, GNULIB_MODULES_LIBGETTEXTPO): Add
'free'.
* gnulib-local/lib/libxml/parser.in.h: Include <stdlib.h>.
* gettext-tools/src/format.h: Likewise.
* gettext-tools/tests/gettextpo-1-prg.c: Undefine free.

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@
 /gettext-tools/libgettextpo/float.c
 /gettext-tools/libgettextpo/float.in.h
 /gettext-tools/libgettextpo/fopen.c
+/gettext-tools/libgettextpo/free.c
 /gettext-tools/libgettextpo/fstat.c
 /gettext-tools/libgettextpo/fstrcmp.c
 /gettext-tools/libgettextpo/fstrcmp.h
