Update after gnulib changed.
* libtextstyle/configure.ac: Set GNULIB_MDA_ISATTY. This fixes a link error on
native Windows.

--- a/libtextstyle/configure.ac
+++ b/libtextstyle/configure.ac
@@ -73,6 +73,7 @@ lts_INIT
 dnl Arrange that the gnulib-generated <unistd.h> does not declare isatty(). The
 dnl adhoc-tests want to get this declaration from <textstyle.h>, not <unistd.h>.
 GNULIB_ISATTY=0
+GNULIB_MDA_ISATTY=0
 
 dnl Compilation on mingw and Cygwin needs special Makefile rules, because
 dnl 1. when we install a shared library, we must arrange to export
