Update after gnulib changed: Fix link errors on native Windows.
* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC, GNULIB_MODULES_LIBGETTEXTPO): Add
strdup-posix.
Avoid the *-list-tests, since they reference a variable, leading to a problem
with --enable-shared.
* gettext-tools/libgettextpo/Makefile.am (config.h): Undefine GNULIB_GETCWD and
REPLACE_FCHDIR that are defined in the parent config.h.

--- a/.gitignore
+++ b/.gitignore
@@ -219,6 +219,7 @@
 /gettext-tools/libgettextpo/str-two-way.h
 /gettext-tools/libgettextpo/strchrnul.c
 /gettext-tools/libgettextpo/strchrnul.valgrind
+/gettext-tools/libgettextpo/strdup.c
 /gettext-tools/libgettextpo/streq.h
 /gettext-tools/libgettextpo/strerror-override.c
 /gettext-tools/libgettextpo/strerror-override.h
