--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -290,17 +290,17 @@ srcdir=`pwd`
 
 # Check integrity of package: A configure.in/ac must be present. Sets variable
 # - configure_in    name of configure.in/ac file.
-if test -f configure.in; then
-  configure_in=configure.in
+if test -f configure.ac; then
+  configure_in=configure.ac
 else
-  if test -f configure.ac; then
-    configure_in=configure.ac
+  if test -f configure.in; then
+    configure_in=configure.in
   else
     # KDE specific convention: configure.in.in
     if test -f configure.in.in; then
       configure_in=configure.in.in
     else
-      func_fatal_error "Missing configure.in or configure.ac, please cd to your package first."
+      func_fatal_error "Missing configure.ac or configure.in, please cd to your package first."
     fi
   fi
 fi
