build: Simplify the use of gnulib in libasprintf.
* autogen.sh (GNULIB_MODULES_LIBASPRINTF): Add vasnprintf. Remove attribute,
errno, verify, xsize.
Pass option '--source-base=gnulib-lib' instead of
'--source-base=. --makefile-name=Makefile.gnulib'.
Don't create any gettext-runtime/libasprintf/gnulib-m4/*.m4 file through simple
copy.
* gettext-runtime/libasprintf/printf-args.c: Remove file.
* gettext-runtime/libasprintf/printf-args.h: Remove file.
* gettext-runtime/libasprintf/printf-parse.c: Remove file.
* gettext-runtime/libasprintf/printf-parse.h: Remove file.
* gettext-runtime/libasprintf/vasnprintf.c: Remove file.
* gettext-runtime/libasprintf/vasnprintf.h: Remove file.
* gettext-runtime/libasprintf/lib-asprintf.c: Don't include printf-args.c,
printf-parse.c, vasnprintf.c, asnprintf.c.
(STATIC): Remove macro.
* gettext-runtime/libasprintf/configure.ac: Hide undesired symbols from the
global namespace.
(AC_CONFIG_FILES): Add gnulib-lib/Makefile.
* gettext-runtime/libasprintf/Makefile.am: Don't include Makefile.gnulib.
(SUBDIRS, AM_CPPFLAGS): New variable.
(libasprintf_la_SOURCES, lib_asprintf_EXTRASOURCES): Remove files that are now
in gnulib-lib/.
(LIBASPRINTF_EXPORTED_SYMBOLS_REGEX): New variable.
(libasprintf_la_LDFLAGS): Use it.
(libasprintf.la): Link with gnulib-lib/libgnu.la.
* Makefile.am (distcheck-hook): Don't check the files in
gettext-runtime/libasprintf/.

--- a/.gitignore
+++ b/.gitignore
@@ -39,16 +39,8 @@
 /gettext-runtime/gnulib-lib/
 /gettext-runtime/gnulib-m4/
 /gettext-runtime/doc/relocatable.texi
+/gettext-runtime/libasprintf/gnulib-lib/
 /gettext-runtime/libasprintf/gnulib-m4/
-/gettext-runtime/libasprintf/Makefile.gnulib
-/gettext-runtime/libasprintf/alloca.c
-/gettext-runtime/libasprintf/alloca.in.h
-/gettext-runtime/libasprintf/attribute.h
-/gettext-runtime/libasprintf/errno.in.h
-/gettext-runtime/libasprintf/size_max.h
-/gettext-runtime/libasprintf/verify.h
-/gettext-runtime/libasprintf/xsize.c
-/gettext-runtime/libasprintf/xsize.h
 /gettext-runtime/man/x-to-1.in
 /gettext-tools/doc/relocatable.texi
 /gettext-tools/gnulib-m4/
@@ -608,7 +600,6 @@ autom4te.cache/
 /gettext-runtime/intl-csharp/GNU.Gettext.dll.mdb
 /gettext-runtime/intl-java/**/*.class
 /gettext-runtime/intl-java/libintl.jar
-/gettext-runtime/libasprintf/libgnu.la
 /gettext-runtime/libasprintf/libasprintf.la
 /gettext-runtime/man/gettext.1
 /gettext-runtime/man/gettext.1.html
@@ -768,8 +759,6 @@ core
 /gettext-runtime/intl/libgnuintl.la
 /gettext-runtime/intl/localename-table.h
 /gettext-runtime/libasprintf/autosprintf.h
-/gettext-runtime/libasprintf/alloca.h
-/gettext-runtime/libasprintf/errno.h
 /gettext-runtime/po/??@*.insert-header
 /gettext-runtime/po/remove-potcdate.sed
 /gettext-runtime/src/gettext.res
